--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <title>Work with GIT</title>
 </head>
 <body>
-    <p>Git+GitHub</p>
+    <h1>Git+GitHub</h1>
+    <section class="buttons">
+        <button class="first">first button</button>
+        <button class="second">second button</button>
+        <button class="third">third button</button>
+    </section>
     
 </body>
 </html>
