--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <script defer src="js\script.js"></script>
     <title>Work with GIT</title>
 </head>
 <body>
@@ -14,6 +15,5 @@
         <button class="second">second button</button>
         <button class="third">third button</button>
     </section>
-    
 </body>
 </html>
