adding a shape and centering

--- a/index.html
+++ b/index.html
@@ -9,11 +9,25 @@
     <title>Work with GIT</title>
 </head>
 <body>
-    <h1>Git+GitHub</h1>
+    <section class="header">
+        <h1>Git+GitHub</h1>
+    </section>
     <section class="buttons">
         <button class="first">first button</button>
         <button class="second">second button</button>
         <button class="third">third button</button>
+    </section>
+    <section class="user-data">
+        <form action="" class="form">
+            <input type = "text"  name = "firstname" placeholder =  "Введите имя"> <br> <br>
+			<input type = "text" name = "lastname" placeholder =  "Введите фамилию"> <br> <br>
+			<input type = "tel" name = "tel" placeholder = "Введите номер телефона"> <br> <br>
+            <input type = "email" name = "email" placeholder =  "Введите email"> <br> <br>
+            <input type = "password" name = "password" placeholder =  "Введите пароль"> <br> <br>
+            <label><input type="checkbox" class="password-checkbox">Показать пароль</label> <br> <br>
+			<input type = "reset" name = "reset" placeholder = "сбросить">
+            <input type = "submit" name = "submit" placeholder = "отправить" disabled>
+        </form>
     </section>
 </body>
 </html>
