--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 			<input type = "text" name = "lastname" placeholder =  "Введите фамилию"> <br> <br>
 			<input type = "tel" name = "tel" placeholder = "Введите номер телефона"> <br> <br>
             <input type = "email" name = "email" placeholder =  "Введите email"> <br> <br>
-            <input type = "password" name = "password" placeholder =  "Введите пароль"> <br> <br>
-            <label><input type="checkbox" class="password-checkbox">Показать пароль</label> <br> <br>
+            <input type = "password" class = "password-field" name = "password" placeholder =  "Введите пароль"> <br> <br>
+            <label><input type = "checkbox" class = "password-checkbox"> Показать пароль</label> <br> <br>
 			<input type = "reset" name = "reset" placeholder = "сбросить">
             <input type = "submit" name = "submit" placeholder = "отправить" disabled>
         </form>
