work with buttons reset and submit

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
             <input type = "email" name = "email" placeholder =  "Введите email"> <br> <br>
             <input type = "password" class = "password-field" name = "password" placeholder =  "Введите пароль"> <br> <br>
             <label><input type = "checkbox" class = "password-checkbox"> Показать пароль</label> <br> <br>
-			<input type = "reset" name = "reset" placeholder = "сбросить">
-            <input type = "submit" name = "submit" placeholder = "отправить" disabled>
-        </form>
+			<div class="submit">
+                <input type = "reset" name = "reset" placeholder = "сбросить">
+                <input type = "submit" name = "submit" placeholder = "отправить" disabled>
+            </div>
+         </form>
     </section>
 </body>
 </html>
