--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <section class="header">
         <h1>Git+GitHub</h1>
+        <button class="menu">MENU</button>
     </section>
     <section class="buttons">
         <button class="first">first button</button>
@@ -18,7 +19,7 @@
         <button class="third">third button</button>
     </section>
     <section class="user-data">
-        <form action="" class="form">
+        <form action="#" method="get" class="form">
             <input type = "text"  name = "firstname" placeholder =  "Введите имя"> <br> <br>
 			<input type = "text" name = "lastname" placeholder =  "Введите фамилию"> <br> <br>
 			<input type = "tel" name = "tel" placeholder = "Введите номер телефона"> <br> <br>
@@ -30,6 +31,9 @@
                 <input type = "submit" name = "submit" placeholder = "отправить" disabled>
             </div>
          </form>
+    </section>
+    <section class="hidden-block">
+        <div class="close">X</div>
     </section>
 </body>
 </html>
