--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <script defer src="js\script.js"></script>
     <title>Work with GIT</title>
 </head>
+
 <body>
     <section class="header">
         <h1>Git+GitHub</h1>
@@ -20,20 +22,30 @@
     </section>
     <section class="user-data">
         <form action="#" method="get" class="form">
-            <input type = "text"  name = "firstname" placeholder =  "Введите имя"> <br> <br>
-			<input type = "text" name = "lastname" placeholder =  "Введите фамилию"> <br> <br>
-			<input type = "tel" name = "tel" placeholder = "Введите номер телефона"> <br> <br>
-            <input type = "email" name = "email" placeholder =  "Введите email"> <br> <br>
-            <input type = "password" class = "password-field" name = "password" placeholder =  "Введите пароль"> <br> <br>
-            <label><input type = "checkbox" class = "password-checkbox"> Показать пароль</label> <br> <br>
-			<div class="submit">
-                <input type = "reset" name = "reset" placeholder = "сбросить">
-                <input type = "submit" name = "submit" placeholder = "отправить" disabled>
+            <input type="text" name="firstname" placeholder="Введите имя"> <br> <br>
+            <input type="text" name="lastname" placeholder="Введите фамилию"> <br> <br>
+            <input type="tel" name="tel" placeholder="Введите номер телефона"> <br> <br>
+            <input type="email" name="email" placeholder="Введите email"> <br> <br>
+            <input type="password" class="password-field" name="password" placeholder="Введите пароль"> <br> <br>
+            <label><input type="checkbox" class="password-checkbox"> Показать пароль</label> <br> <br>
+            <div class="submit">
+                <input type="reset" name="reset" placeholder="сбросить">
+                <input type="submit" name="submit" placeholder="отправить" disabled>
             </div>
-         </form>
+        </form>
     </section>
     <section class="hidden-block">
-        <div class="close">X</div>
+        <div class="closed"><img src="img\close.png" alt="icon_close"></div>
+        <ul>
+            <li><h2>MENU</h2></li>
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+            <li>4</li>
+            <li>5</li>
+        </ul>
+        </nav>
     </section>
 </body>
+
 </html>
