--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <input type="text" name="lastname" placeholder="Введите фамилию"> <br> <br>
             <input type="tel" name="tel" placeholder="Введите номер телефона"> <br> <br>
             <input type="email" name="email" placeholder="Введите email"> <br> <br>
-            <input type="password" class="password-field" name="password" placeholder="Введите пароль"> <br> <br>
+            <input type="password" autocomplete="current-password" class="password-field" name="password" placeholder="Введите пароль"> <br> <br>
             <label><input type="checkbox" class="password-checkbox"> Показать пароль</label> <br> <br>
             <div class="submit">
                 <input type="reset" name="reset" placeholder="сбросить">
@@ -35,15 +35,16 @@
         </form>
     </section>
     <section class="hidden-block">
-        <div class="closed"><img src="img\close.png" alt="icon_close"></div>
-        <ul>
-            <li><h2>MENU</h2></li>
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
-            <li>4</li>
-            <li>5</li>
-        </ul>
+        <div ><img class="closed" src="img\close.png" alt="icon_close"></div>
+        <nav>
+            <ul>
+                <li><h2>MENU</h2></li>
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+                <li>4</li>
+                <li>5</li>
+            </ul>
         </nav>
     </section>
 </body>
