added a hover stroke in the input fields

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         </form>
     </section>
     <section class="hidden-block">
+        <h2 class="heading-menu">MENU</h2>
         <div ><img class="closed" src="img\close.png" alt="icon_close"></div>
         <nav>
             <ul>
-                <li><h2>MENU</h2></li>
                 <li>1</li>
                 <li>2</li>
                 <li>3</li>
